<?xml version="1.0"?>
<package>
	<name>c_fuzzy</name>
	<version>1.1.1</version>
	<description>
		c_fuzzy, a fuzzy library for a cognitive system
	</description>
	<maintainer email="davide.tateo@mail.polimi.it">Davide Tateo</maintainer>
	<license>GPLv3</license>

	<author>Davide Tateo</author>
	<url>http://ros.org/wiki/c_fuzzy</url>

	<build_depend>roscpp</build_depend>
	<build_depend>message_generation</build_depend>
	<run_depend>message_runtime</run_depend>

	<buildtool_depend>catkin</buildtool_depend>
</package>


