<?xml version="1.0"?>
<package>
	<name>c_slam_msgs</name>
	<version>0.0.0</version>
	<description>Messages needed by the c_slam system</description>
	<maintainer email="davide.tateo@Mail.polimi.it">Davide Tateo</maintainer>


	<license>GPLv3</license>


	<url type="website">http://wiki.ros.org/c_slam_msgs</url>

	<author>Davide Tateo</author>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>message_generation</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	
	<run_depend>message_runtime</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	

</package>