<package>
	<name>c_slam_roamfree</name>
	<version>1.0.0</version>
	<description>
		The c_slam_roamfree package
	</description>
	
	<maintainer email="davide@todo.todo">Davide Antonio Cucci</maintainer>
	<license>GPLv3</license>

	<author>Davide Antonio Cucci</author>
	<author>Davide Tateo</author>
	<url>http://ros.org/wiki/roamfre_c_slam</url>

	<build_depend>roscpp</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>c_slam_msgs</build_depend>
	
	<buildtool_depend>catkin</buildtool_depend>
</package>