<package>
	<name>c_vision</name>
	<version>1.0.0</version>
	<description>
		c_vision, cognitive vision package
	</description>
	<maintainer email="davide.tateo@mail.polimi.it">Davide Tateo</maintainer>
	<license>GPLv3</license>

	<author>Davide Tateo</author>
	<url>http://ros.org/wiki/c_vision</url>

	<build_depend>roscpp</build_depend>
	<build_depend>opencv2</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>angles</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>image_geometry</build_depend>
	<build_depend>messgae_filters</build_depend>
	
	<build_depend>c_fuzzy</build_depend>
	<build_depend>c_tracking</build_depend>

	<buildtool_depend>catkin</buildtool_depend>
</package>
