<?xml version="1.0"?>
<package>
  <name>roamfree_c_slam</name>
  <version>0.0.0</version>
  <description>The roamfree_c_slam package</description>
  
  <maintainer email="davide@todo.todo">davide</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  
  <build_depend>message_generation</build_depend>
  
  <run_depend>message_runtime</run_depend>

</package>